      /etc/wanna-build/wanna-build.conf).
    - Remove extra parenthesis from wanna-build-merge-packages
      (Closes: #553364).  Thanks to Felipe Sateler for this patch.
  * Remove absent -t option for --top from sbuild-stats.1
    (Closes: #566320).  Thanks to Kurt Roeckx.
  * buildd:
    - Don't bind-mount /home into the schroot. (Closes: #566315)

 -- Roger Leigh <rleigh@debian.org>  Sat, 23 Jan 2010 12:16:36 +0000

sbuild (0.59.0-1) unstable; urgency=low

  [ Roger Leigh ]
  * New release. 
  * Use version comparison functions in WannaBuild::Database
    (Closes: #521486).  Thanks to Florian Weimer. 
  * WannaBuild::Database: Allow whitespace in Architecture field
    (Closes: #535415).  Thanks to John Wright for this patch. 
  * Sbuild::Build, WannaBuild::Database: Add support for architecture
    aliases/wildcards (Closes: #501230).  Thanks to Andres Mejia for
    these patches. 
  * Sbuild::Conf doesn't require STATS_DIR to exist, and
    Sbuild::Build::write_stats only uses STATS_DIR in batch mode
    (Closes: #539570).

 -- Roger Leigh <rleigh@debian.org>  Sun, 02 Aug 2009 11:15:26 +0100

sbuild (0.58.6-1) unstable; urgency=low

  [ Roger Leigh ]
  * New release.
  * debian/control: Update package descriptions to use correct
    English in full sentences (Closes: #531022).  Thanks to
    Gerfried Fuchs for pointing this out.
  * Don't include Epoch in DSC filename (Closes: #529786).  Thanks
    to Gustavo Noronha Silva for spotting this.

 -- Roger Leigh <rleigh@debian.org>  Sat, 20 Jun 2009 10:48:45 +0100

sbuild (0.58.5-1) unstable; urgency=low

  [ Roger Leigh ]
  * New release.
  * Install README.Debian in sbuild package (rename to
    debian/sbuild.README.Debian, Closes: #533029).
  * debian/sbuild.install: Don't install Perl modules, which should
    only be included in libsbuild-perl (Closes: #533143).
  * debian/control:
    - libsbuild-perl: Replace sbuild <= 0.58.4 (due to also providing
      perl modules)